--- a/source/interface/Madot.Interface.BlazorWebUI/Components/Pages/CommonPage.razor
+++ b/source/interface/Madot.Interface.BlazorWebUI/Components/Pages/CommonPage.razor
@@ -1,4 +1,4 @@
-@page "/static-page/{StaticPageId:int}"
+@page "/page/{StaticPageId:int}"
 @rendermode @(new InteractiveServerRenderMode(false))
 @using Markdig;
 
