--- a/source/interface/Madot.Interface.BlazorWebUI/Components/ApiComponents/ApiSpec.razor
+++ b/source/interface/Madot.Interface.BlazorWebUI/Components/ApiComponents/ApiSpec.razor
@@ -1,6 +1,6 @@
 @if (_oasId is not null)
 {
-    var link = $"{AppSettings.ApiBaseUrl}/open-api-spec/as-html/{_oasId}";
+    var link = $"{AppSettings.ApiPublicUrl}/open-api-spec/as-html/{_oasId}";
     <iframe class="api-spec-frame" src="@link">
             
     </iframe>
