--- a/source/interface/Madot.Interface.BlazorWebUI/Components/Layout/CommonPagesList.razor
+++ b/source/interface/Madot.Interface.BlazorWebUI/Components/Layout/CommonPagesList.razor
@@ -3,7 +3,7 @@
     <div class="static-section">
         @foreach (var commonPage in _commonPages)
         {
-            var link = $"/static-page/{commonPage.Id}";
+            var link = $"/page/{commonPage.Id}";
             <div class="madot-menuitem">
                 <div class="madot-menuitem-icon">
                     <Icon Name="IconName.ChevronRight"/>
