fixing last bugs

--- a/source/interface/Madot.Interface.BlazorWebUI/Components/Pages/ApiPage.razor
+++ b/source/interface/Madot.Interface.BlazorWebUI/Components/Pages/ApiPage.razor
@@ -64,5 +64,9 @@
             }
         </Tabs>
     }
-    <h1>Nothing here... yet!</h1>
+    else
+    {
+        <h1>Nothing here... yet!</h1>
+    }
+    
 }
